--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -3,7 +3,9 @@
   color: #ffffff
   a.sidebar-link, .site-name
     color: #ffffff !important
-  .sidebar, .navbar, .page, .links
+  .sidebar, .navbar, .page
+    background-color: #292D3E
+  .links
     background-color: #292D3E !important
   h1, h2, h3, h4, h5, h6
     font-family: 'Hiragino Kaku Gothic Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -31,3 +33,8 @@
       font-size: 17px
     .content.default
       width: 22em
+@media print
+  .resume-class
+    color: #292D3E
+  .sidebar, .navbar, .page
+    background-color: #ffffff !important
